# matrix-dicebot

./: .#.drone.yml  .#README.md  .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  sqlx-data.json
.github/workflows/: dicebot-ci.yml
api/: Cargo.toml  Rocket.toml  client.js  client.ts  package.json  tsconfig.json  webpack.config.js
api/_proto/: dicebot_pb.d.ts  dicebot_pb.js  dicebot_pb_service.d.ts  dicebot_pb_service.js  web-api_pb.d.ts  web-api_pb.js  web-api_pb_service.d.ts  web-api_pb_service.js
api/src/: api.rs  auth.rs  config.rs  errors.rs  grpc_web.rs  lib.rs  main.rs  schema.rs
dicebot/: Cargo.toml  Dockerfile
dicebot/src/: config.rs  context.rs  error.rs  lib.rs  logic.rs  matrix.rs
dicebot/src/basic/: dice.rs  mod.rs  parser.rs  roll.rs
dicebot/src/bot/: command_execution.rs  event_handlers.rs  mod.rs
dicebot/src/cofd/: dice.rs  parser.rs
dicebot/src/commands/: management.rs  misc.rs  mod.rs  parser.rs  rooms.rs
dicebot/src/cthulhu/: dice.rs  parser.rs
dicebot/src/db/sqlite/: rooms.rs  state.rs  users.rs  variables.rs
dicebot/src/db/sqlite/migrator/: mod.rs
dicebot/src/db/sqlite/migrator/migrations/: V10__add_game_system.rs  V6__user_accounts.rs
dicebot/src/parser/: dice.rs  mod.rs
dicebot/src/rpc/: mod.rs  service.rs
dicebot/src/systems/: mod.rs
rpc/: Cargo.toml  build.rs
rpc/protos/: dicebot.proto  web-api.proto
rpc/src/: lib.rs
src/: actors.rs  bot.rs  cofd.rs  commands.rs  config.rs  context.rs  db.rs  dice.rs  error.rs  help.rs  lib.rs  logic.rs  main.rs  matrix.rs  migrate_cli.rs  models.rs  parser.rs  roll.rs  state.rs  variables.rs
src/actors/: state.rs
src/basic/: dice.rs  parser.rs  roll.rs
src/bot/: command_execution.rs  event_handlers.rs  mod.rs
src/cofd/: dice.rs  mod.rs  parser.rs
src/commands/: basic_rolling.rs  cofd.rs  cthulhu.rs  management.rs  misc.rs  mod.rs  parser.rs  rooms.rs  variables.rs
src/cthulhu/: dice.rs  parser.rs
src/db/: data_migrations.rs  errors.rs  migrations.rs  mod.rs  rooms.rs  schema.rs  state.rs  variables.rs
src/db/sqlite/: errors.rs  mod.rs  rooms.rs  state.rs  users.rs  variables.rs
src/db/sqlite/migrator/migrations/: V1__variables.rs  V4__room_events.rs  V5__room_users.rs  V7__no_more_room_state.rs  V8__user_state.rs  V9__nullable_password_and_account_status.rs  mod.rs
src/db/variables/: migrations.rs
src/dice/: parser.rs
src/migrator/migrations/: V1__variables.rs  V2__room_info.rs  V2__rooms.rs  V3__dbstate.rs  V4__room_events.rs  V5__room_users.rs  mod.rs
web-ui/: index.js  package.json  webpack.config.js
web-ui/crate/: Cargo.toml  build.rs  schema.graphql
web-ui/crate/graphql/queries/: get_user_variable.graphql  rooms_for_user.graphql
web-ui/crate/src/: error.rs  graphql.rs  grpc.rs  lib.rs  logic.rs  oaths.rs  rooms.rs  state.rs
web-ui/crate/src/api/: auth.rs  dicebot.rs  mod.rs
web-ui/crate/src/components/: error_message.rs  login.rs  mod.rs
