[package]
name = "tenebrous-dicebot"
version = "0.9.0"
authors = ["Taylor C. Richberger <taywee@gmx.com>", "projectmoon <projectmoon@agnos.is>"]
edition = "2018"
license = 'AGPL-3.0-or-later'
description = 'An async Matrix dice bot for role-playing games'
readme = 'README.md'
repository = 'https://git.agnos.is/projectmoon/matrix-dicebot'
keywords = ["games", "dice", "matrix", "bot"]
categories = ["games"]

[dependencies]
log = "0.4"
env_logger = "0.8"
toml = "0.5"
nom = "5"
rand = "0.8"
thiserror = "1.0"
itertools = "0.10"
async-trait = "0.1"
url = "2.1"
dirs = "3.0"
indoc = "1.0"
combine = "4.5"
sled = "0.34"
zerocopy = "0.4"
byteorder = "1.3"
futures = "0.3"
memmem = "0.1"
bincode = "1.3"
html2text = "0.2"
phf = { version = "0.8", features = ["macros"] }
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", branch = "master" }

[dependencies.serde]
version = "1"
features = ['derive']

[dependencies.tokio]
version = "1.0"
features = [ "full" ]
