[package]
name = "tenebrous-rpc"
version = "0.1.0"
authors = ["projectmoon <projectmoon@agnos.is>"]
edition = "2018"

# Default is to build tonic and tonic-build as they normally are. The
# wasm feature is for WebAssmebly, and disables Tonic's transport
# feature. There is a separate grpc-web-client that can use tonic's
# requests to make grpc-web requests.
[features]
default = ["tonic/default", "tonic-build/default"]
wasm = [ "tonic/codegen", "tonic/prost", "tonic-build/prost"]

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic", branch = "master", default_features = false }

[dependencies]
tonic = { git = "https://github.com/hyperium/tonic", branch = "master", default_features = false }
prost = "0.7"